--- a/App/www/index.html
+++ b/App/www/index.html
@@ -16,7 +16,7 @@
 <body>
     <div data-role="page" id="home">
         <div data-role="header" style="padding-top: 20px;">
-            <p align="center">Orari per LuckyBuss</p>
+            <p align="center">LuckyBuss</p>
         </div>
 
         <div data-role="content">
