mungon cordova.js
e vendova ne koment

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -117,7 +117,7 @@
     </div>
 
 
-    <script type="text/javascript" src="cordova.js"></script>
+   <!-- <script type="text/javascript" src="cordova.js"></script> -->
     <script type="text/javascript" src="js/index.js"></script>
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
     <script type="text/javascript">
