regullim i orarit ashtu si eshte ne faqen e idotours

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -124,8 +124,8 @@
 	
         app.initialize();
         var date = new Date();
-        var IdoToursGV = ["06:20", "07:10", "08:10", "09:40", "11:10", "12:45", "13:45", "15:10", "16:20", "17:55", "19:40"];
-		var IdoToursTE = ["06:30", "07:30", "08:30", "09:30", "11:10", "12:45", "13:45", "15:10", "16:20", "17:55", "19:40"];
+        var IdoToursGV = ["06:20", "07:10", "08:10", "09:40", "11:10", "12:45", "13:20", "14:30", "15:45", "17:10", "19:00", "20:25"];
+		var IdoToursTE = ["05:45", "06:20", "07:25", "08:50", "10:25", "11:55", "12:30", "13:45", "15:10", "16:20", "17:55", "19:40"];
         
         var table = document.getElementById("tableGV");
 		var table2 = document.getElementById("tableTE");
