--- a/App/www/index.html
+++ b/App/www/index.html
@@ -310,7 +310,7 @@
 				
 				if (autobusaTE == 0)
 					{
-						var row = table.insertRow(1);
+						var row = table2.insertRow(1);
                         var cell1 = row.insertCell(0);
                         var cell2 = row.insertCell(1);
                         var cell3 = row.insertCell(2);
