--- a/App/www/index.html
+++ b/App/www/index.html
@@ -20,10 +20,13 @@
         </div>
 
         <div data-role="content">
-           
+		
             <h3 style="text-align:center;">Zgjidhni destinacionin tuaj?</h3>
             <a href="#Gostivar" data-transition="slide" data-role="button" id="Gostivari">Gostivar</a>
 			<a href="#Tetov" data-transition="slide" data-role="button" id="Tetova">Tetovë</a>
+			<br />
+			<h5 style="text-align:center;">Agjencioni i zgjedhur:</h5>
+			<h3 style="text-align:center;"><div id="agjencioniZgjedhur"></div></h3>
         </div>
 
         <div data-role="footer" data-position="fixed" style="height:56px;">
@@ -193,7 +196,10 @@
         var date = new Date();
         var IdoToursGV = ["06:20", "07:10", "08:10", "09:40", "11:10", "12:45", "13:20", "14:30", "15:45", "17:10", "19:00", "20:25"];
 		var IdoToursTE = ["05:45", "06:20", "07:25", "08:50", "10:25", "11:55", "12:30", "13:45", "15:10", "16:20", "17:55", "19:40"];
-        
+		
+		var agjencioniZgjedhur = "Ido Tours";
+		document.getElementById('agjencioniZgjedhur').innerHTML = agjencioniZgjedhur;
+		
         var table = document.getElementById("tableGV");
 		var table2 = document.getElementById("tableTE");
 		var table3 = document.getElementById("tableAll");
