E ndrova e bona GV - TE ma mejr

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -358,7 +358,7 @@
                         cell1.setAttribute("align", "left");
                         cell2.innerHTML = IdoToursTE[i];
                         cell2.setAttribute("align", "center");
-                        cell3.innerHTML = "Gostivar - > Tetovë";
+                        cell3.innerHTML = "GV - > TE";
                         cell3.setAttribute("align", "right");
                         existsAll = true;
 					
@@ -390,7 +390,7 @@
                         cell1.setAttribute("align", "left");
                         cell2.innerHTML = IdoToursGV[i];
                         cell2.setAttribute("align", "center");
-                        cell3.innerHTML = "Tetovë - > Gostivar";
+                        cell3.innerHTML = "TE - > GV";
                         cell3.setAttribute("align", "right");
                         existsAll = true;
                 }
