Animacia vendova per qef

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -33,8 +33,8 @@
             <div data-role="navbar" data-iconpos="top">
                 <ul>
                     <li><a href="#" data-icon="gear">Preferencat</a></li>
-                    <li><a href="#home" data-icon="grid">Ballina</a></li>
-                    <li><a href="#OrariAll" data-icon="star">Oraret</a></li>
+                    <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                    <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
                 </ul>
             </div>
         </div>
@@ -44,7 +44,7 @@
     <div data-role="page" id="Gostivar">
         <div data-role="header" style="padding-top: 20px;">
             <p align="center">My Buss Schedule</p>
-            <a href="#home" data-transition="pop" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+            <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
         </div>
 
         <div data-role="content">
@@ -73,8 +73,8 @@
             <div data-role="navbar" data-iconpos="top">
                 <ul>
                     <li><a href="#" data-icon="gear">Preferencat</a></li>
-                    <li><a href="#home" data-icon="grid">Ballina</a></li>
-                    <li><a href="#OrariAll" data-icon="star">Oraret</a></li>
+                    <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                    <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
                 </ul>
             </div>
@@ -84,7 +84,7 @@
     <div data-role="page" id="Tetov">
         <div data-role="header" style="padding-top: 20px;">
             <p align="center">My Buss Schedule</p>
-            <a href="#home" data-transition="pop" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+            <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
         </div>
 
         <div data-role="content">
@@ -111,8 +111,8 @@
             <div data-role="navbar" data-iconpos="top">
                 <ul>
                     <li><a href="#" data-icon="gear">Preferencat</a></li>
-                    <li><a href="#home" data-icon="grid">Ballina</a></li>
-                    <li><a href="#OrariAll" data-icon="star">Oraret</a></li>
+                    <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                    <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
                 </ul>
             </div>
@@ -138,8 +138,8 @@
             <div data-role="navbar" data-iconpos="top">
                 <ul>
                     <li><a href="#" data-icon="gear">Preferencat</a></li>
-                    <li><a href="#home" data-icon="grid">Ballina</a></li>
-                    <li><a href="#OrariAll" data-icon="star">Oraret</a></li>
+                    <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                    <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
                 </ul>
             </div>
         </div>
@@ -150,8 +150,8 @@
 	
 	<div data-role="page" id="OrariIDO">
         <div data-role="header" style="padding-top: 20px;">
-            <p align="center">Orari i autobusave për Gostivar dhe Tetovë</p>
-            <a href="#home" data-transition="pop" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
+            <p align="center">Orari për Gostivar dhe Tetovë</p>
+            <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
         </div>
 
         <div data-role="content">
@@ -178,8 +178,8 @@
             <div data-role="navbar" data-iconpos="top">
                 <ul>
                     <li><a href="#" data-icon="gear">Preferencat</a></li>
-                    <li><a href="#home" data-icon="grid">Ballina</a></li>
-                    <li><a href="#OrariAll" data-icon="star">Oraret</a></li>
+                    <li><a href="#home" data-icon="grid" data-transition="flip">Ballina</a></li>
+                    <li><a href="#OrariAll" data-icon="star" data-transition="slide">Oraret</a></li>
 
                 </ul>
             </div>
