--- a/App/www/index.html
+++ b/App/www/index.html
@@ -92,7 +92,7 @@
             <table data-role="table" data-mode="" class="ui-shadow table-stripe ui-responsive" id="tableTetova">
                 <thead>
                     <tr>
-                        <th>Agjencioni</th>
+                        <th style="text-align: left;">Agjencioni</th>
                         <th style="text-align: center;">Koha</th>
                         <th style="text-align: right;">Koha e Mbetur</th>
                     </tr>
