json per te 3 agjencionet, e regullumu si duhet, plus minify e kom bo

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -195,24 +195,7 @@
         app.initialize();
         var date = new Date();
 		
-		var orari =	{
-  "oraret" : [
-  {
-  "agjencioni" : "Ido Tours",
-  "nisja" : "Gostivar",
-  "destinacioni" : "Tetovë",
-  "orari" : [
-    "06:20", "07:10", "08:10", "09:40", "11:10", "12:45", "13:20", "14:30", "15:45", "17:10", "19:00", "20:25"
-    ]
-},
-{
-  "agjencioni" : "Ido Tours",
-  "nisja" : "Tetovë",
-  "destinacioni" : "Gostivar",
-  "orari" : [
-    "05:45", "06:20", "07:25", "08:50", "10:25", "11:55", "12:30", "13:45", "15:10", "16:20", "17:55", "19:40"
-    ]
-}]};
+		var orari =	{"oraret":{"Ido Tours":{"Gostivar":{"destinacioni":"Tetovë","orari":["06:20","07:10","08:10","09:40","11:10","12:45","13:20","14:30","15:45","17:10","19:00","20:25"]},"Tetovë":{"destinacioni":"Gostivar","orari":["05:45","06:20","07:25","08:50","10:25","11:55","12:30","13:45","15:10","16:20","17:55","19:40"]}},"Nasir Tours":{"Gostivar":{"destinacioni":"Tetovë","orari":["06:20","07:10","08:10","09:40","11:10","12:45","13:20","14:30","15:45","17:10","19:00","20:25"]},"Tetovë":{"destinacioni":"Gostivar","orari":["05:45","06:20","07:25","08:50","10:25","11:55","12:30","13:45","15:10","16:20","17:55","19:40"]}},"Euro Tours":{"Gostivar":{"destinacioni":"Tetovë","orari":["06:20","07:10","08:10","09:40","11:10","12:45","13:20","14:30","15:45","17:10","19:00","20:25"]},"Tetovë":{"destinacioni":"Gostivar","orari":["05:45","06:20","07:25","08:50","10:25","11:55","12:30","13:45","15:10","16:20","17:55","19:40"]}}}};
 		
         var IdoToursGV = ["06:20", "07:10", "08:10", "09:40", "11:10", "12:45", "13:20", "14:30", "15:45", "17:10", "19:00", "20:25"];
 		var IdoToursTE = ["05:45", "06:20", "07:25", "08:50", "10:25", "11:55", "12:30", "13:45", "15:10", "16:20", "17:55", "19:40"];
