--- a/App/www/index.html
+++ b/App/www/index.html
@@ -43,7 +43,7 @@
 
 <div data-role="page" id="Gostivar">
     <div data-role="header" style="padding-top: 20px;">
-        <p align="center">My Buss Schedule</p>
+        <p align="center">LuckyBuss</p>
         <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
     </div>
 
@@ -83,7 +83,7 @@
 
 <div data-role="page" id="Tetov">
     <div data-role="header" style="padding-top: 20px;">
-        <p align="center">My Buss Schedule</p>
+        <p align="center">LuckyBuss</p>
         <a href="#home" data-transition="flip" class="ui-btn-left ui-btn-corner-all ui-btn ui-icon-home ui-btn-icon-notext ui-shadow" style="margin-top:25px"></a>
     </div>
 
@@ -161,7 +161,7 @@
             <thead>
             <tr>
                 <th style="text-align: left;">Nisja nga Gostivari</th>
-                <th style="text-align: left;">Nisja nga Tetova</th>
+                <th style="text-align: right;">Nisja nga Tetova</th>
             </tr>
             </thead>
             <tbody id="tableIDO">
@@ -198,7 +198,7 @@
             <thead>
             <tr>
                 <th style="text-align: left;">Nisja nga Gostivari</th>
-                <th style="text-align: left;">Nisja nga Tetova</th>
+                <th style="text-align: right;">Nisja nga Tetova</th>
             </tr>
             </thead>
             <tbody id="tableNASIR">
@@ -235,13 +235,13 @@
             <thead>
             <tr>
                 <th style="text-align: left;">Nisja nga Gostivari</th>
-                <th style="text-align: left;">Nisja nga Tetova</th>
+                <th style="text-align: right;">Nisja nga Tetova</th>
             </tr>
             </thead>
             <tbody id="tableEURO">
             <tr>
-                <td id="koha" style="text-align:right"></td>
-                <td id="koha2" style="text-align:right"></td>
+                <td id="koha"></td>
+                <td id="koha2"></td>
             </tr>
             </tbody>
         </table>
